# py_ai_crew

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/basic/: __init__.py  blog_generation.py
py_ai_crew/: __init__.py  agents.py  executor.py  flow.py  goals.py  models.py  tools.py
