[tool.poetry]
name = "py_ai_crew"
version = "0.1.0"
description = "A hierarchical task execution framework for AI agents with goal-based validation and quality control"
authors = ["Sylvester Wong <sylvester@thesylvester.ca>"]
readme = "README.md"
packages = [{include = "py_ai_crew"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.1"
pydantic-ai = "^0.1.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3

[tool.mypy]
python-version = "3.9"
warn-return-any = true
warn-unused-configs = true
disallow-untyped-defs = true

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 88 